# major_system

./: README.md  app.py  major_sytem.py  pyproject.toml  requirements.txt
templates/: base.html  encode.html  index.html  search.html
